Wollok Game page updated